First run of error fixes for errors found by FindBugs